Current:
  * Fixed a few instances of cursors jumping out of the screen
  * Fixed a few instances of cursors jumping to the beginning of the worksheet
  * Better detection which cell maxima is processing and if it still is doing so
  * Regression: Hiding the toolbar didn't work on some systems
  * Markdown support for <=, >=, <=>, <-, ->, <->, => and +/- symbols.
  * An option to not export maxima's input as well as the output.
  * Allow Extending selection from part of a single cell to multiple cells.
  * An option to use High-resolution bitmaps for the HTML export.
  * Images that are too big for the window now are displayed in a scaled-down version.
  * Fixed the support for out-of-tree-bulds that was broken in 15.04
  * Fixed a race condition that could cause text from maxima to be appended to the wrong cell.
  * Meaningful ALT texts for the HTML export to provide accessibility
  * Performance fixes that are espectionally effective on MSW
  * Unification of some platform-specific code
  * bash autocompletion
  * A fourth sectioning level
  * Made entering uppercase greek letters easier
  * Syntax highlighting in code cell
  * A "halt on error" feature
  * A batch mode that pauses evaluation if maxima asks a question.
  * Now evaluation is only triggered if evaluation of the last command has finished.
  * If ever a end-of-evaluation marker gets lost there is a new "trigger evaluation"
	menu entry in the maxima menu.
  * Ctrl+Tab now launches the autocompletion (or content assistant, if available)
  * on wxGtk we now have a content assistant that is based on the surprisingly powerful
	autocompletion feature.

15.04.0:
  * wxWidgets 3.0 is now a mandatory requirement
  * Various bugfixes
  * Loads of stability and performance fixes
  * Adjustable framerate for animations
  * A version-control friendly flavour of the wxmx format
  * A mimetype marker at the beginning of wxmx files
  * Better desktop integration
  * An offline manual