@@ -1,4 +1,5 @@
 Current:
+  * The table-of-contents-sidebar no shows the current cursor position
   * Fixed a few instances of cursors jumping out of the screen
   * Fixed a few instances of cursors jumping to the beginning of the worksheet
   * Better detection which cell maxima is processing and if it still is doing so
